Closed
Bug 1909933
Opened 1 year ago
Closed 1 year ago
Apple Maps compass looks square instead of circle
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
130 Branch
| Tracking | Status | |
|---|---|---|
| firefox130 | --- | fixed |
People
(Reporter: saschanaz, Assigned: gw)
References
(Blocks 1 open bug)
Details
Attachments
(2 files, 2 obsolete files)
Kinda related to bug 1882178 but I don't have minimal repro for this one.
STR on traditional 96DPI monitor:
- Get a UA string switcher e.g. https://addons.mozilla.org/en-US/firefox/addon/chrome-mask/.
- Open https://beta.maps.apple.com
- Mask as Chrome
- Go back to https://beta.maps.apple.com (because you'd be in
/unsupportedpath in step 1) - See the square compass.
- Try rotating it (drag by mouse), or control any property in
.mw-compassCSS rule in devtools, like top: 81px, width: 37px, border-radius: 49% etc., or zoom the page. It's very sensitive, anything can make it circle.
Comment 1•1 year ago
|
||
Comment 2•1 year ago
|
||
Attachment #9414899 -
Attachment is obsolete: true
Comment 3•1 year ago
|
||
Attachment #9414900 -
Attachment is obsolete: true
Comment 4•1 year ago
|
||
Glenn, this looks like it's probably the same problem as bug 1882178
Flags: needinfo?(gwatson)
| Assignee | ||
Comment 5•1 year ago
|
||
Reduced wrench test case:
---
root:
items:
- type: clip
id: 2
complex:
- rect: [12, 12, 50, 50]
radius: 27
- type: stacking-context
clip-chain: [2]
items:
- type: backdrop-filter
bounds: 12 12 50 50
filters: invert(1)
- type: stacking-context
items:
- type: rect
color: red
bounds: 12 12 50 50
Flags: needinfo?(gwatson)
Comment 6•1 year ago
|
||
Should this be closed as duplicate?
| Assignee | ||
Comment 7•1 year ago
|
||
No, this is slightly different from that bug, and will require a different fix.
| Assignee | ||
Comment 8•1 year ago
|
||
Ensure that when we construct a wrapping surface for a transform
due to a complex clip, we mark it as wrapping a backdrop-filter
when that is required.
Updated•1 year ago
|
Assignee: nobody → gwatson
Status: NEW → ASSIGNED
Updated•1 year ago
|
Blocks: wr-backdrop-filter-correctness
Pushed by gwatson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0d344fdf5479
Fix backdrop-filter on a transformed + complex clip r=tnikkel
Comment 11•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox130:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•