Bug 1909933 - Fix backdrop-filter on a transformed + complex clip r=tnikkel

Ensure that when we construct a wrapping surface for a transform
due to a complex clip, we mark it as wrapping a backdrop-filter
when that is required.

Differential Revision: https://phabricator.services.mozilla.com/D217922